@@ -45,4 +45,5 @@ importFrom(igraph,layout_with_fr)
 importFrom(igraph,vcount)
 importFrom(network,as.edgelist)
 importFrom(sna,gplot.layout.kamadakawai)
+importFrom(stats,quantile)
 importFrom(stats,terms)
